@@ -1,52 +1,83 @@
 import org.apache.tools.ant.taskdefs.condition.Os
 
-if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases && !rootProject.publishSnapshots && !rootProject.skipBootifulArtifact)) {
+if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProject.skipBootifulArtifact)) {
     //logger.info "Applying Spring Boot plugin to bootify web application artifact for project $project.name..."
 
     apply plugin: "org.springframework.boot"
 
     sourceSets {
+        /**
+         * Make resources become reloadable.
+         * Application’s static resources are loaded from their source location.
+         */
         bootRun {
-            resources {
+            if (project.hasProperty("casWebApplication") && project.ext.casWebApplication) {
+                resources {
+                    srcDirs new File("/etc/cas/templates/"),
+                            new File("${project(":webapp").getProjectDir()}/cas-server-webapp-resources/src/main/resources/"),
+                            new File("${project(":support").getProjectDir()}/cas-server-support-palantir/src/main/resources/static"),
+                            new File("${project(":support").getProjectDir()}/cas-server-support-palantir/src/main/resources/templates"),
+                            new File("${project(":support").getProjectDir()}/cas-server-support-thymeleaf/src/main/resources/"),
+                            new File("${project(":support").getProjectDir()}/cas-server-support-themes-collection/src/main/resources/")
+                }
             }
         }
     }
 
     springBoot {
         mainClassName = project.ext.mainClassName
-        buildInfo()
+        buildInfo {
+            properties {
+                if (!rootProject.generateTimestamps) {
+                    excludes = ['time']
+                }
+            }
+        }
     }
 
     if (plugins.hasPlugin("war")) {
+
+        tasks.named("processBootRunResources") {
+            dependsOn(project(":support:cas-server-support-palantir").tasks.named("build-ui"))
+            duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+        }
         
-        javadoc {
+        tasks.named('javadoc') {
             enabled false
         }
 
-        bootWar {
-            mainClassName = project.ext.mainClassName
+        tasks.named('bootWar') {
+
+            def gitCommitId = project.ext.has("gitProps") ? project.ext.gitProps['git.commit.id'] : 'N/A'
+            mainClass.set(project.ext.mainClassName)
             manifest {
                 attributes(
-                        "Automatic-Module-Name": project.name,
+                        "Automatic-Module-Name": project.name.replace("-", "."),
                         "Implementation-Title": project.name,
                         "Implementation-Vendor": project.group,
-                        "Created-By": project.group,
-                        "Implementation-Date": java.time.ZonedDateTime.now(),
-                        "Specification-Version": "${-> project.ext.has("gitProps") ? project.ext.gitProps['git.commit.id'] : 'N/A'}",
+                        "Created-By": project.group)
+                if (rootProject.generateTimestamps) {
+                    attributes("Implementation-Date": java.time.ZonedDateTime.now())
+                }
+
+                attributes(
+                        "Specification-Version": "${-> gitCommitId}",
                         "Implementation-Version": project.version)
             }
-            from "${buildDir}/resources/main", { into "WEB-INF/classes" }
+            from "${project.layout.buildDirectory.getAsFile().get().path}/resources/main", { into "WEB-INF/classes" }
             launchScript()
+            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
         }
 
     } else {
-        bootJar {
-            mainClassName = project.ext.mainClassName
+        tasks.named('bootJar') {
+            mainClass.set(project.ext.mainClassName)
             if (project.ext.has("archiveFileName")) {
                 archiveFileName = project.ext.archiveFileName
             }
-            from "${buildDir}/resources/main", { into "WEB-INF/classes" }
+            from "${project.layout.buildDirectory.getAsFile().get().path}/resources/main", { into "WEB-INF/classes" }
             launchScript()
+            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
         }
 
         /*
@@ -69,26 +100,37 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases && !rootP
         }
     }
 
-    bootRun {
+    tasks.named('bootRun') {
+        mainClass.set(project.ext.mainClassName)
+
         if (Os.isFamily(Os.FAMILY_WINDOWS)) {
             dependsOn pathingJar
             doFirst {
-                classpath = files("$buildDir/classes/main", "$buildDir/resources/main", "${project(":webapp").getProjectDir()}/cas-server-webapp-resources/src/main/resources/", pathingJar.archivePath)
+                classpath = files("$project.layout.buildDirectory.getAsFile().get().path/classes/main", "$project.layout.buildDirectory.getAsFile().get().path/resources/main", "${project(":webapp").getProjectDir()}/cas-server-webapp-resources/src/main/resources/", pathingJar.archivePath)
             }
         }
 
         sourceResources sourceSets.bootRun
         systemProperties = System.properties
-        
+
         def list = []
+        list.add("-Djava.net.preferIPv4Stack=true ")
+        list.add("-Djava.net.preferIPv4Addresses=true")
         list.add("-XX:TieredStopAtLevel=1")
-        list.add("-Xverify:none")
         list.add("--add-modules")
         list.add("java.se")
         list.add("--add-exports")
         list.add("java.base/jdk.internal.ref=ALL-UNNAMED")
         list.add("--add-opens")
         list.add("java.base/java.lang=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.util=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.time=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.net=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/sun.security.action=jdk.crypto.ec")
         list.add("--add-opens")
         list.add("java.base/java.nio=ALL-UNNAMED")
         list.add("--add-opens")
@@ -98,14 +140,10 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishReleases && !rootP
         list.add("--add-opens")
         list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
 
-        list.add("-XX:+UnlockExperimentalVMOptions")
-        list.add("-XX:+EnableJVMCI")
-        list.add("-XX:+UseJVMCICompiler")
-
         if (rootProject.enableRemoteDebugging) {
             def port = findAvailableTcpPort(5000..5010)
             if (port > 0) {
-                println "Listening on port ${port} for remote debugging requests"
+                ansi.green "Port ${port} will be available for remote debugging requests with suspend=${rootProject.remoteDebuggingSuspend}"
                 list.add("-Xrunjdwp:transport=dt_socket,address=${port},server=y,suspend=${rootProject.remoteDebuggingSuspend}")
             }
         }
@@ -131,7 +169,7 @@ int findAvailableTcpPort(List<Integer> portRange) {
             serverSocket.close()
             return port
         } catch (Exception e) {
-             logger.debug "Port ${port} is not available: ${e.message}"
+            logger.debug "Port ${port} is not available: ${e.message}"
         }
     }
     return -1
